--- a/markup/landing.html
+++ b/markup/landing.html
@@ -11,10 +11,14 @@
         <section class="head">
             <div class="org">iMessenger</div>
             <div class="buttons">
-                <a href="./login.html"> <button class="button">Log In</button> </a>
-                <a href="./signup.html"> <button class="button">Sign Up</button> </a>
+                <a href="./login.html" id="login"> <button class="button">Log In</button> </a>
+                <a href="./signup.html" id="signup"> <button class="button">Sign Up</button> </a>
+                <a href="./dashboard.html" id="dashboard"> <button class="button">Dashboard</button> </a>
+                <a id="logout"><button class="button">Log Out</button></a>
             </div>
         </section>
+
+        <span id="logout-error" class="logout-error"></span>
 
         <section class="middle">
             <p class="heading">Introducing The Community 🤩</p>
