--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -17,6 +17,7 @@
         </section>
 
         <span id="logout-error" class="logout-error"></span>
+        <span id="session-expired" class="session-expired"></span>
 
         <section class="user-profile">
             <div class="user-img-wrap">
